Snarky note about the lack of tests.

--- a/Changes
+++ b/Changes
@@ -11,3 +11,4 @@
     * OFun::Karma tracks up-votes and down-votes in the channel so you can see
       how hated your most-hated-RDBMS is and how loved the funny people in your
       chat are.
+    * Oh, and there are no tests. I'm evil. I know.
